# 2025-10-08_EDA

./: .gitignore  README.md  pyproject.toml  tree.txt
data/: Open Food Facts.webloc  food_ready_for_EDA.csv  mercadona_food.csv  mercadona_food_final.csv  mercadona_food_no_nutri.csv  🛒 Mercadona - Grocery Products Dataset.webloc
prompts/: nutri_prompt.md  nutri_script.md  scraper_script.md  semáforos.md
src/: EDA.ipynb  main.py  mercadona_scraper.py  nutri.py  semáforos.py  utils.py
src/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
