[project]
name = "2025-10-08-rda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
