[project]
name = "2025-10-08-rda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "openai>=1.40",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "typing>=3.10.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
